# project1_gindullina_regina_m25-555

./: README.md  main.py  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
